--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -1175,7 +1175,119 @@ using the Tab key. The F2 (Edit) key will still open the template editor.&lt;/p&
        <property name="fieldGrowthPolicy">
         <enum>QFormLayout::ExpandingFieldsGrow</enum>
        </property>
-       <item row="1" column="1">
+       <item row="1" column="0" colspan="2">
+        <widget class="QGroupBox" name="groupBox">
+         <property name="title">
+          <string>Select the categories to display in the Tag browser and their order</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_3">
+          <item row="1" column="0">
+           <widget class="QLabel">
+            <property name="text">
+             <string>User categories and Saved searches cannot be moved</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QToolButton" name="tb_down_button">
+            <property name="toolTip">
+             <string>Move down</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../../../../resources/images.qrc">
+              <normaloff>:/images/arrow-down.png</normaloff>:/images/arrow-down.png</iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QToolButton" name="tb_up_button">
+            <property name="toolTip">
+             <string>Move up</string>
+            </property>
+            <property name="icon">
+             <iconset resource="../../../../resources/images.qrc">
+              <normaloff>:/images/arrow-up.png</normaloff>:/images/arrow-up.png</iconset>
+            </property>
+           </widget>
+          </item>
+          <item row="3" column="1">
+           <spacer name="verticalSpacer_5">
+            <property name="orientation">
+             <enum>Qt::Vertical</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>20</width>
+              <height>40</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+          <item row="2" column="0" rowspan="3">
+           <widget class="QListView" name="tb_display_order">
+            <property name="alternatingRowColors">
+             <bool>true</bool>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="0">
+           <layout class="QHBoxLayout" name="horizontalLayout_4">
+            <item>
+             <widget class="QPushButton" name="tb_reset_layout_button">
+              <property name="toolTip">
+               <string>&lt;p&gt;Click this button to reset the list to its default order.&lt;/p&gt;</string>
+              </property>
+              <property name="text">
+               <string>Reset list</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="tb_import_layout_button">
+              <property name="toolTip">
+               <string>&lt;p&gt;Click this button to set the list to one
+previously exported. This could be useful if you have several libraries with
+similar structure and you want to use the same column order for each one. Columns
+in the imported list that aren't in the current library are ignored. Columns in
+the library that are not in the imported list are put at the end and marked
+as displayable.&lt;/p&gt;</string>
+              </property>
+              <property name="text">
+               <string>Import list</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <widget class="QPushButton" name="tb_export_layout_button">
+              <property name="toolTip">
+               <string>&lt;p&gt;Click this button to write the current display
+settings to a file. This could be useful if you have several libraries with similar
+structure and you want to use the same column order for each one.&lt;/p&gt;</string>
+              </property>
+              <property name="text">
+               <string>Export list</string>
+              </property>
+             </widget>
+            </item>
+            <item>
+             <spacer name="horizontalSpacer">
+              <property name="orientation">
+               <enum>Qt::Horizontal</enum>
+              </property>
+              <property name="sizeHint" stdset="0">
+               <size>
+                <width>40</width>
+                <height>20</height>
+               </size>
+              </property>
+             </spacer>
+            </item>
+           </layout>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item row="3" column="1">
         <widget class="QComboBox" name="opt_tags_browser_partition_method">
          <property name="toolTip">
           <string>Choose how Tag browser subcategories are displayed when
@@ -1186,7 +1298,7 @@ if you never want subcategories</string>
          </property>
         </widget>
        </item>
-       <item row="1" column="0">
+       <item row="3" column="0">
         <widget class="QLabel" name="label_9">
          <property name="text">
           <string>&amp;Category partitioning method:</string>
@@ -1196,7 +1308,7 @@ if you never want subcategories</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="0">
+       <item row="4" column="0">
         <widget class="QLabel" name="label_10">
          <property name="text">
           <string>Co&amp;llapse when more items than:</string>
@@ -1206,7 +1318,7 @@ if you never want subcategories</string>
          </property>
         </widget>
        </item>
-       <item row="3" column="1">
+       <item row="4" column="1">
         <widget class="QSpinBox" name="opt_tags_browser_collapse_at">
          <property name="toolTip">
           <string>If a Tag browser category has more than this number of items, it is divided
@@ -1217,7 +1329,7 @@ up into subcategories. If the partition method is set to disable, this value is 
          </property>
         </widget>
        </item>
-       <item row="4" column="0">
+       <item row="5" column="0">
         <widget class="QLabel" name="label_10">
          <property name="text">
           <string>Combine letters &amp;when fewer items than:</string>
@@ -1227,7 +1339,7 @@ up into subcategories. If the partition method is set to disable, this value is 
          </property>
         </widget>
        </item>
-       <item row="4" column="1">
+       <item row="5" column="1">
         <widget class="QSpinBox" name="opt_tags_browser_collapse_fl_at">
          <property name="toolTip">
           <string>If collapsing by first letter, combine adjacent letters together if
@@ -1239,7 +1351,7 @@ not set to first letter, this value is ignored. Set to zero to disable.</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="0">
+       <item row="6" column="0">
         <widget class="QLabel" name="label">
          <property name="text">
           <string>Spacing between &amp;items:</string>
@@ -1249,7 +1361,7 @@ not set to first letter, this value is ignored. Set to zero to disable.</string>
          </property>
         </widget>
        </item>
-       <item row="5" column="1">
+       <item row="6" column="1">
         <widget class="QDoubleSpinBox" name="opt_tag_browser_item_padding">
          <property name="toolTip">
           <string>The spacing between consecutive items in the Tag browser. In units of (ex) which is the approximate height of the letter 'x' in the currently used font. </string>
@@ -1271,7 +1383,7 @@ not set to first letter, this value is ignored. Set to zero to disable.</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="0">
+       <item row="7" column="0">
         <widget class="QLabel" name="label_8111">
          <property name="text">
           <string>Categories &amp;not to partition:</string>
@@ -1281,7 +1393,7 @@ not set to first letter, this value is ignored. Set to zero to disable.</string>
          </property>
         </widget>
        </item>
-       <item row="6" column="1">
+       <item row="7" column="1">
         <widget class="EditWithComplete" name="opt_tag_browser_dont_collapse">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -1298,7 +1410,7 @@ a few top-level elements.</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="0">
+       <item row="8" column="0">
         <widget class="QLabel" name="label_81">
          <property name="text">
           <string>C&amp;ategories with hierarchical items:</string>
@@ -1308,7 +1420,7 @@ a few top-level elements.</string>
          </property>
         </widget>
        </item>
-       <item row="7" column="1">
+       <item row="8" column="1">
         <widget class="EditWithComplete" name="opt_categories_using_hierarchy">
          <property name="sizePolicy">
           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -1326,14 +1438,14 @@ then the tags will be displayed each on their own line.</string>
          </property>
         </widget>
        </item>
-       <item row="8" column="0">
+       <item row="9" column="0">
         <widget class="QCheckBox" name="opt_tag_browser_show_tooltips">
          <property name="text">
           <string>Show &amp;tooltips</string>
          </property>
         </widget>
        </item>
-       <item row="9" column="0">
+       <item row="10" column="0">
         <widget class="QCheckBox" name="opt_show_avg_rating">
          <property name="text">
           <string>Show &amp;average ratings</string>
@@ -1343,7 +1455,7 @@ then the tags will be displayed each on their own line.</string>
          </property>
         </widget>
        </item>
-       <item row="10" column="0" colspan="2">
+       <item row="11" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_tag_browser_show_counts">
          <property name="toolTip">
           <string>Show counts for items in the Tag browser. Such as the number of books
@@ -1355,14 +1467,14 @@ see the counts by hovering your mouse over any item.</string>
          </property>
         </widget>
        </item>
-       <item row="11" column="0" colspan="2">
+       <item row="12" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_tag_browser_old_look">
          <property name="text">
           <string>Use &amp;alternating row colors</string>
          </property>
         </widget>
        </item>
-       <item row="12" column="0" colspan="2">
+       <item row="13" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_tag_browser_hide_empty_categories">
          <property name="toolTip">
           <string>When checked, calibre will automatically hide any category
@@ -1375,7 +1487,7 @@ see the counts by hovering your mouse over any item.</string>
          </property>
         </widget>
        </item>
-       <item row="13" column="0" colspan="2">
+       <item row="14" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_tag_browser_always_autocollapse">
          <property name="toolTip">
           <string>When checked, Find in the Tag browser will show all items
@@ -1387,7 +1499,7 @@ see the counts by hovering your mouse over any item.</string>
          </property>
         </widget>
        </item>
-       <item row="14" column="0" colspan="2">
+       <item row="15" column="0" colspan="2">
         <widget class="QCheckBox" name="opt_tag_browser_allow_keyboard_focus">
          <property name="toolTip">
           <string>&lt;p&gt;When checked, the Tag browser can get keyboard focus, allowing
@@ -1401,7 +1513,7 @@ using the mouse.&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
-       <item row="15" column="0" colspan="2">
+       <item row="16" column="0" colspan="2">
         <widget class="QLabel" name="tb_focus_label">
          <property name="styleSheet">
           <string notr="true">margin-left: 1.5em</string>
@@ -1414,7 +1526,7 @@ using the mouse.&lt;/p&gt;</string>
          </property>
         </widget>
        </item>
-      </layout>
+     </layout>
      </widget>
      <widget class="QWidget" name="cover_browser_tab">
       <attribute name="icon">
