--- a/src/calibre/gui2/preferences/look_feel.ui
+++ b/src/calibre/gui2/preferences/look_feel.ui
@@ -958,7 +958,7 @@ A value of zero means calculate automatically.</string>
             <item>
              <widget class="QPushButton" name="em_reset_layout_button">
               <property name="toolTip">
-               <string>&lt;p&gt;Click this button to reset the list to its default order.&lt;/p&gt;</string>
+               <string>Click this button to reset the list to its default order.</string>
               </property>
               <property name="text">
                <string>Reset list</string>
@@ -1151,7 +1151,7 @@ using the Tab key. The F2 (Edit) key will still open the template editor.&lt;/p&
         <item row="0" column="0">
          <widget class="QLabel">
           <property name="text">
-           <string>Select the categories to display and their &amp;order</string>
+           <string>Select the categories to display in the Tag browser, and their &amp;order</string>
           </property>
           <property name="buddy">
            <cstring>tb_display_order</cstring>
@@ -1214,7 +1214,7 @@ using the Tab key. The F2 (Edit) key will still open the template editor.&lt;/p&
           <item>
            <widget class="QPushButton" name="tb_reset_layout_button">
             <property name="toolTip">
-             <string>&lt;p&gt;Click this button to reset the list to its default order.&lt;/p&gt;</string>
+             <string>Click this button to reset the list to its default order.</string>
             </property>
             <property name="text">
              <string>Reset list</string>
@@ -1242,90 +1242,6 @@ as displayable.&lt;/p&gt;</string>
              <string>&lt;p&gt;Click this button to write the current display
 settings to a file. This could be useful if you have several libraries with similar
 structure and you want to use the same column order for each one.&lt;/p&gt;</string>
-            </property>
-            <property name="text">
-             <string>Export list</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </item>
-        <item row="0" column="2">
-         <widget class="QLabel">
-          <property name="text">
-           <string>Select categories with &amp;hierarchical items:</string>
-          </property>
-          <property name="buddy">
-           <cstring>tb_hierarchical_cats</cstring>
-          </property>
-          <property name="toolTip">
-           <string>&lt;p&gt;Check the box for an item if it is to be displayed as a
-hierarchical tree in the Tag browser. For example, if you check
-'tags' then tags of the form 'Mystery.English'
-and 'Mystery.Thriller' will be displayed with English and Thriller
-both under 'Mystery'. If 'tags' is not checked
-then the tags will be displayed each on their own line.&lt;/p&gt;
-&lt;p&gt;The categories 'authors', 'publisher', 'news', 'formats', and 'rating'
-cannot be hierarchical.&lt;/p&gt;</string>
-          </property>
-         </widget>
-        </item>
-        <item row="1" column="2" rowspan="3">
-         <widget class="QListView" name="tb_hierarchical_cats">
-          <property name="minimumSize">
-           <size>
-            <width>0</width>
-            <height>200</height>
-           </size>
-          </property>
-          <property name="alternatingRowColors">
-           <bool>true</bool>
-          </property>
-         </widget>
-        </item>
-        <item row="4" column="2">
-         <layout class="QHBoxLayout" name="horizontalLayout_4">
-          <item>
-           <widget class="QPushButton" name="tb_hierarchy_reset_layout_button">
-            <property name="toolTip">
-             <string>&lt;p&gt;Click this button to reset the list to its default order.&lt;/p&gt;</string>
-            </property>
-            <property name="text">
-             <string>Reset list</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="tb_hierarchy_import_layout_button">
-            <property name="toolTip">
-             <string>&lt;p&gt;Click this button to set the list to one
-previously exported. This could be useful if you have several libraries with
-similar structure and you want to use the same for each one.&lt;/p&gt;</string>
-            </property>
-            <property name="text">
-             <string>Import list</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QPushButton" name="tb_hierarchy_export_layout_button">
-            <property name="toolTip">
-             <string>&lt;p&gt;Click this button to write the current display
-settings to a file. This could be useful if you have several libraries with similar
-structure and you want to use the same for each one.&lt;/p&gt;</string>
             </property>
             <property name="text">
              <string>Export list</string>
@@ -1519,11 +1435,7 @@ if you never want subcategories&lt;/p&gt;</string>
               </property>
              </widget>
             </item>
-           </layout>
-          </item>
-          <item row="0" column="1">
-           <layout class="QFormLayout" name="formLayout">
-            <item row="0" column="0">
+            <item row="1" column="0">
              <widget class="QLabel" name="label_10">
               <property name="text">
                <string>Combine letters &amp;when fewer items than:</string>
@@ -1533,7 +1445,7 @@ if you never want subcategories&lt;/p&gt;</string>
               </property>
              </widget>
             </item>
-            <item row="0" column="1">
+            <item row="1" column="1">
              <widget class="QSpinBox" name="opt_tags_browser_collapse_fl_at">
               <property name="toolTip">
                <string>&lt;p&gt;If collapsing by first letter, combine adjacent letters together if
@@ -1545,7 +1457,7 @@ not set to first letter, this value is ignored. Set to zero to disable.&lt;/p&gt
               </property>
              </widget>
             </item>
-            <item row="1" column="0">
+            <item row="2" column="0">
              <widget class="QLabel" name="label_10">
               <property name="text">
                <string>Co&amp;llapse when more items than:</string>
@@ -1555,7 +1467,7 @@ not set to first letter, this value is ignored. Set to zero to disable.&lt;/p&gt
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
+            <item row="2" column="1">
              <widget class="QSpinBox" name="opt_tags_browser_collapse_at">
               <property name="toolTip">
                <string>&lt;p&gt;If a Tag browser category has more than this number of items, it is divided
@@ -1604,7 +1516,7 @@ a few top-level elements.&lt;/p&gt;</string>
             <item>
              <widget class="QPushButton" name="tb_partition_reset_button">
               <property name="toolTip">
-               <string>&lt;p&gt;Click this button to reset the list to its default order.&lt;/p&gt;</string>
+               <string>Click this button to reset the list to its default order.</string>
               </property>
               <property name="text">
                <string>Reset list</string>
@@ -1649,6 +1561,201 @@ structure and you want to use the same for each one.&lt;/p&gt;</string>
              </spacer>
             </item>
            </layout>
+          </item>
+         </layout>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="tb_tab3">
+       <attribute name="title">
+        <string>&amp;Hierarchy and searching</string>
+       </attribute>
+       <layout class="QGridLayout">
+        <item row="0" column="0">
+         <widget class="QLabel">
+          <property name="text">
+           <string>Select categories with &amp;hierarchical items:</string>
+          </property>
+          <property name="buddy">
+           <cstring>tb_hierarchical_cats</cstring>
+          </property>
+          <property name="toolTip">
+           <string>&lt;p&gt;Check the box for an item if it is to be displayed as a
+hierarchical tree in the Tag browser. For example, if you check
+'tags' then tags of the form 'Mystery.English'
+and 'Mystery.Thriller' will be displayed with English and Thriller
+both under 'Mystery'. If 'tags' is not checked
+then the tags will be displayed each on their own line.&lt;/p&gt;
+&lt;p&gt;The categories 'authors', 'publisher', 'news', 'formats', and 'rating'
+cannot be hierarchical.&lt;/p&gt;</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0" rowspan="3">
+         <widget class="QListView" name="tb_hierarchical_cats">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Minimum" vsizetype="Expanding">
+            <horstretch>0</horstretch>
+            <verstretch>1</verstretch>
+           </sizepolicy>
+          </property>
+          <property name="minimumSize">
+           <size>
+            <width>0</width>
+            <height>200</height>
+           </size>
+          </property>
+          <property name="alternatingRowColors">
+           <bool>true</bool>
+          </property>
+         </widget>
+        </item>
+        <item row="4" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QPushButton" name="tb_hierarchy_reset_layout_button">
+            <property name="toolTip">
+             <string>Click this button to reset the list to its default order.</string>
+            </property>
+            <property name="text">
+             <string>Reset list</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="tb_hierarchy_import_layout_button">
+            <property name="toolTip">
+             <string>&lt;p&gt;Click this button to set the list to one
+previously exported. This could be useful if you have several libraries with
+similar structure and you want to use the same for each one.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>Import list</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <widget class="QPushButton" name="tb_hierarchy_export_layout_button">
+            <property name="toolTip">
+             <string>&lt;p&gt;Click this button to write the current display
+settings to a file. This could be useful if you have several libraries with similar
+structure and you want to use the same for each one.&lt;/p&gt;</string>
+            </property>
+            <property name="text">
+             <string>Export list</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
+          </item>
+         </layout>
+        </item>
+        <item row="10" column="0">
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>0</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="11" column="0">
+         <widget class="QLabel">
+          <property name="text">
+           <string>Set the &amp;order of searches when clicking on items</string>
+          </property>
+          <property name="toolTip">
+           <string>&lt;p&gt;Set the order of the searches when clicking on an item in
+the Tag browser. The 'or its children' options are ignored when clicking on
+top-level categories, items that aren't in a hierarchical category, and items
+that don't have children.&lt;/p&gt;</string>
+          </property>
+          <property name="buddy">
+           <cstring>tb_search_order</cstring>
+          </property>
+         </widget>
+        </item>
+        <item row="12" column="0" rowspan="3">
+         <widget class="QListWidget" name="tb_search_order">
+          <property name="sizeAdjustPolicy">
+           <enum>QAbstractScrollArea::AdjustToContents</enum>
+          </property>
+         </widget>
+        </item>
+        <item row="12" column="1">
+         <widget class="QToolButton" name="tb_search_order_up_button">
+          <property name="toolTip">
+           <string>Move up.</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../../../resources/images.qrc">
+            <normaloff>:/images/arrow-up.png</normaloff>:/images/arrow-up.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="13" column="1">
+         <spacer name="verticalSpacer_51">
+          <property name="orientation">
+           <enum>Qt::Vertical</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>1</width>
+            <height>1</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
+        <item row="14" column="1">
+         <widget class="QToolButton" name="tb_search_order_down_button">
+          <property name="toolTip">
+           <string>Move down.</string>
+          </property>
+          <property name="icon">
+           <iconset resource="../../../../resources/images.qrc">
+            <normaloff>:/images/arrow-down.png</normaloff>:/images/arrow-down.png</iconset>
+          </property>
+         </widget>
+        </item>
+        <item row="15" column="0">
+         <layout class="QHBoxLayout" name="horizontalLayout_4">
+          <item>
+           <widget class="QPushButton" name="tb_search_order_reset_button">
+            <property name="toolTip">
+             <string>Click this button to reset the list to its default order.</string>
+            </property>
+            <property name="text">
+             <string>Reset list</string>
+            </property>
+           </widget>
+          </item>
+          <item>
+           <spacer name="horizontalSpacer">
+            <property name="orientation">
+             <enum>Qt::Horizontal</enum>
+            </property>
+            <property name="sizeHint" stdset="0">
+             <size>
+              <width>40</width>
+              <height>20</height>
+             </size>
+            </property>
+           </spacer>
           </item>
          </layout>
         </item>
